add: ajustando postagens e detalhes do layout

--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -82,64 +82,69 @@
 <!--Sobre nós-->
 
 <div class="container colum-md-12 d-flex justify-content-center">
-  <div class="col-md-2 mb-2 ml-2">
-    <div class="card-body ">
-      <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-     <p>
-       <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 1</a>
-      Aqui vai uma descrição sobre nos! é melhor que seja boa.
-     </p>
-    </div>
+  <div class="row d-flex justify-content-center">
 
-  </div><!-- /.col-lg-4 -->
-  <div class="col-md-2  mb-2 ml-2">
-    <div class="card-body ">
-      <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-     <p>
-       <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 2</a>
-      Aqui vai uma descrição sobre nos! é melhor que seja boa.
-     </p>
+    <div class="col-md-2 mb-2 d-flex justify-content-center">
+      <div class="card-body ">
+        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
+       <p>
+         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 1</a>
+        Aqui vai uma descrição sobre nos! é melhor que seja boa.
+       </p>
+      </div>
+  
+    </div><!-- /.col-lg-4 -->
+    <div class="col-md-2 mb-2 d-flex justify-content-center">
+      <div class="card-body ">
+        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
+       <p>
+         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 2</a>
+        Aqui vai uma descrição sobre nos! é melhor que seja boa.
+       </p>
+      </div>
+  
+    </div>
+      <div class="col-md-2 mb-2 d-flex justify-content-center">
+      <div class="card-body ">
+        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
+       <p>
+         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 3</a>
+        Aqui vai uma descrição sobre nos! é melhor que seja boa.
+       </p>
+      </div>
+    </div>
+    <div class="col-md-2 mb-2 d-flex justify-content-center">
+      <div class="card-body ">
+        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
+       <p>
+         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 1</a>
+        Aqui vai uma descrição sobre nos! é melhor que seja boa.
+       </p>
+      </div>
+  
+    </div><!-- /.col-lg-4 -->
+    <div class="col-md-2 mb-2 d-flex justify-content-center">
+      <div class="card-body ">
+        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
+       <p>
+         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 2</a>
+        Aqui vai uma descrição sobre nos! é melhor que seja boa.
+       </p>
+      </div>
+  
+    </div>
+      <div class="col-md-2 mb-2 d-flex justify-content-center">
+      <div class="card-body ">
+        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
+       <p>
+         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 3</a>
+        Aqui vai uma descrição sobre nos! é melhor que seja boa.
+       </p>
+      </div>
     </div>
 
   </div>
-    <div class="col-md-2  mb-2 ml-2">
-    <div class="card-body ">
-      <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-     <p>
-       <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 3</a>
-      Aqui vai uma descrição sobre nos! é melhor que seja boa.
-     </p>
-    </div>
-  </div>
-  <div class="col-md-2 mb-2 ml-2">
-    <div class="card-body ">
-      <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-     <p>
-       <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 1</a>
-      Aqui vai uma descrição sobre nos! é melhor que seja boa.
-     </p>
-    </div>
-
-  </div><!-- /.col-lg-4 -->
-  <div class="col-md-2 mb-2 ml-2">
-    <div class="card-body ">
-      <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-     <p>
-       <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 2</a>
-      Aqui vai uma descrição sobre nos! é melhor que seja boa.
-     </p>
-    </div>
-
-  </div>
-    <div class="col-md-2  mb-2 ml-2">
-    <div class="card-body ">
-      <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-     <p>
-       <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 3</a>
-      Aqui vai uma descrição sobre nos! é melhor que seja boa.
-     </p>
-    </div>
-  </div>
+  
 
 
  </div><!-- /.row -->
