add: detalhes do layout

--- a/redePets-frontend/src/app/component/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.html
@@ -28,7 +28,7 @@
 
         <hr class="mt-5 mb-5">
         <p class="text-center">
-          Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
+          Não tem uma conta? <a class="text-light" routerLink="/cadastrar">Cadastre-se</a>
         </p>
 
       </form>
