--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -36,7 +36,7 @@
             <p>A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras
               que possuem pets disponíveis para adoção.
             </p>
-            <p><a routerLink="/cadastrar">Cadastre-se</a> ou <a routerLink="/entrar">entre</a> se já possui uma conta.</p>
+            <p><a routerLink="/cadastrar" class="font-weight-bold cor-marrom">Cadastre-se</a> ou <a routerLink="/entrar" class="font-weight-bold cor-marrom">entre</a> se já possui uma conta.</p>
           </div>
 
         </div>
