--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.css
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.css
@@ -28,6 +28,10 @@
   font-size: 16pt;
 }
 
+.fs-20 {
+  font-size: 20px;
+}
+
 .btn {
     animation: bg 10s infinite;
     animation-timing-function: linear
