--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -78,73 +78,91 @@
 </div>
 
 
-
 <!--Sobre nós-->
-
-<div class="container colum-md-12 d-flex justify-content-center">
+<div class="container colum-md-12">
   <div class="row d-flex justify-content-center">
 
-    <div class="col-md-2 mb-2 d-flex justify-content-center">
-      <div class="card-body ">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-       <p>
-         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 1</a>
-        Aqui vai uma descrição sobre nos! é melhor que seja boa.
-       </p>
-      </div>
   
-    </div><!-- /.col-lg-4 -->
-    <div class="col-md-2 mb-2 d-flex justify-content-center">
+    <div class="col-sm-2 mb-2">
       <div class="card-body ">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-       <p>
-         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 2</a>
-        Aqui vai uma descrição sobre nos! é melhor que seja boa.
-       </p>
-      </div>
+        <img class="rounded-circle" src="https://i.imgur.com/sYYrtmF.jpg
+        " width="100" height="100">
+      
+         <a class="btn btn-light d-flex mt-2 btn-sm w-100 h-100" aria-disabled="true"role="button">Diego de Moraes</a>
+          Contatos:
   
-    </div>
-      <div class="col-md-2 mb-2 d-flex justify-content-center">
-      <div class="card-body ">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-       <p>
-         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 3</a>
-        Aqui vai uma descrição sobre nos! é melhor que seja boa.
-       </p>
-      </div>
-    </div>
-    <div class="col-md-2 mb-2 d-flex justify-content-center">
-      <div class="card-body ">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-       <p>
-         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 1</a>
-        Aqui vai uma descrição sobre nos! é melhor que seja boa.
-       </p>
-      </div>
-  
-    </div><!-- /.col-lg-4 -->
-    <div class="col-md-2 mb-2 d-flex justify-content-center">
-      <div class="card-body ">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-       <p>
-         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 2</a>
-        Aqui vai uma descrição sobre nos! é melhor que seja boa.
-       </p>
-      </div>
-  
-    </div>
-      <div class="col-md-2 mb-2 d-flex justify-content-center">
-      <div class="card-body ">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="100" height="100">
-       <p>
-         <a class="btn btn-light d-flex mt-2" href="#" role="button">Nome 3</a>
-        Aqui vai uma descrição sobre nos! é melhor que seja boa.
-       </p>
+        <p class="icons-size">
+          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+    
       </div>
     </div>
 
-  </div>
-  
+
+    <div class="col-sm-2 mb-2 ">
+      <div class="card-body">
+        <img class="rounded-circle" src="https://i.imgur.com/Sf9L15p.jpg" width="100" height="100">
+         <a class="btn btn-light d-flex mt-2 btn-sm d-flex justify-content-center" aria-disabled="true" > Felipe Lauton</a>
+        Contatos:
+        <p class="icons-size">
+          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </p>
+      </div>
+    </div>
+      <div class="col-sm-2 mb-2">
+      <div class="card-body ">
+        <img class="rounded-circle" src="https://i.imgur.com/ycaGJzq.jpg" width="100" height="100">
+       
+         <a class="btn btn-light d-flex mt-2 btn-sm" aria-disabled="true">João Vitor</a>
+         Contatos:
+         <p class="icons-size">
+          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </p>
+      </div>
+    </div>
+    <div class="col-sm-2 mb-2">
+      <div class="card-body ">
+        <img class="rounded-circle" src="https://i.imgur.com/xhkgzzs.jpg" width="100" height="100">
+         <a class="btn btn-light d-flex mt-2 btn-sm" aria-disabled="true">Karina Souza</a>
+         Contatos:
+         <p class="icons-size">
+          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </p>
+      </div>
+    </div>
+
+    <div class="col-sm-2 mb-2">
+      <div class="card-body">
+        <img class="rounded-circle" src="https://i.imgur.com/xJYo4P9.jpg" width="100" height="100">
+         <a class="btn btn-light d-flex mt-2 btn-sm" aria-disabled="true">Matheus Rufino</a>
+         Contatos:
+         <p class="icons-size">
+          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </p>
+      </div>
+    </div>
+
+      <div class="col-sm-2 mb-2">
+      <div class="card-body">
+        <div class="aligm-itens">
+          <img class="rounded-circle" src="https://i.imgur.com/566Bedg.jpg" width="100" height="100">
+            <p class="btn btn-light d-flex mt-2 btn-sm ml-2" aria-disabled="true">Nicoli Fernandes</p>
+              Contatos:
+            <p class="icons-size">
+          <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
+          <i class="fa fa-github-square" aria-hidden="true"></i>
+        </p>
 
 
- </div><!-- /.row -->
+        </div>
+        
+      </div>
+    </div>
+
+  </div><!--Row-->
+
+</div><!--Container-->
