add: ajustes no sobre nós na pagina inicial deslogada

--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
@@ -35,12 +35,12 @@
           <div class="col-md-4">
             <div class="card border-0 shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
               <div class="d-flex justify-content-center">
-                <img class="card-img-top w-100 " src="{{foto}}" alt="Imagem de capa do card">
+                <img class="card-img-top w-100" src="{{foto}}" alt="Imagem de capa do card">
               </div>
 
               <div class="card-body cor-marrom-claro">
-                <h5 class="card-title text-center font-weight-bold">{{nome}}</h5>
-                <p class="card-text text-center font-italic">Quero: {{tipo}}</p>
+                <h5 class="card-title text-center font-weight-bold text-light">{{nome}}</h5>
+                <p class="card-text text-center font-italic text-light">Quero: {{tipo}}</p>
               </div>
 
             </div>
