--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -82,86 +82,94 @@
 <div class="container colum-md-12">
   <div class="row d-flex justify-content-center">
 
-  
-    <div class="col-sm-2 mb-2">
-      <div class="card-body ">
-        <img class="rounded-circle" src="https://i.imgur.com/sYYrtmF.jpg
-        " width="100" height="100">
-      
-         <a class="btn btn-light d-flex mt-2 btn-sm w-100 h-100" aria-disabled="true"role="button">Diego de Moraes</a>
-          Contatos:
-  
-        <p class="icons-size">
-          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-    
-      </div>
-    </div>
-
-
-    <div class="col-sm-2 mb-2 ">
-      <div class="card-body">
-        <img class="rounded-circle" src="https://i.imgur.com/Sf9L15p.jpg" width="100" height="100">
-         <a class="btn btn-light d-flex mt-2 btn-sm d-flex justify-content-center" aria-disabled="true" > Felipe Lauton</a>
-        Contatos:
-        <p class="icons-size">
-          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-        </p>
-      </div>
-    </div>
-      <div class="col-sm-2 mb-2">
-      <div class="card-body ">
-        <img class="rounded-circle" src="https://i.imgur.com/ycaGJzq.jpg" width="100" height="100">
-       
-         <a class="btn btn-light d-flex mt-2 btn-sm" aria-disabled="true">João Vitor</a>
-         Contatos:
-         <p class="icons-size">
-          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-        </p>
-      </div>
-    </div>
-    <div class="col-sm-2 mb-2">
-      <div class="card-body ">
-        <img class="rounded-circle" src="https://i.imgur.com/xhkgzzs.jpg" width="100" height="100">
-         <a class="btn btn-light d-flex mt-2 btn-sm" aria-disabled="true">Karina Souza</a>
-         Contatos:
-         <p class="icons-size">
-          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-        </p>
-      </div>
-    </div>
-
-    <div class="col-sm-2 mb-2">
-      <div class="card-body">
-        <img class="rounded-circle" src="https://i.imgur.com/xJYo4P9.jpg" width="100" height="100">
-         <a class="btn btn-light d-flex mt-2 btn-sm" aria-disabled="true">Matheus Rufino</a>
-         Contatos:
-         <p class="icons-size">
-          <i class="fa fa-linkedin-square mr-1 " aria-hidden="true"></i>
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-        </p>
-      </div>
-    </div>
-
-      <div class="col-sm-2 mb-2">
-      <div class="card-body">
-        <div class="aligm-itens">
-          <img class="rounded-circle" src="https://i.imgur.com/566Bedg.jpg" width="100" height="100">
-            <p class="btn btn-light d-flex mt-2 btn-sm ml-2" aria-disabled="true">Nicoli Fernandes</p>
+      <div class="col-md-2 mb-2">
+        <div class="card-body">
+          <div class="card-top"> 
+            <img class="rounded-circle" src="https://i.imgur.com/sYYrtmF.jpg
+            " width="100" height="100">
+          
+              <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true"role="button">Diego Alonso</a>
               Contatos:
-            <p class="icons-size">
-          <i class="fa fa-linkedin-square mr-1" aria-hidden="true"></i>
-          <i class="fa fa-github-square" aria-hidden="true"></i>
-        </p>
-
-
+              <p class="icons-size">
+                <a href="https://www.linkedin.com/in/diego-alonso-0a0729b4/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
+                <a href="https://github.com/diegoalonso231" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
+              </p>
+          </div>
         </div>
-        
       </div>
-    </div>
+
+      <div class="col-md-2 mb-2 ">
+        <div class="card-body">
+          <div class="card-top">
+            <img class="rounded-circle" src="https://i.imgur.com/Sf9L15p.jpg" width="100" height="100">
+           <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Felipe Lauton</a>
+            Contatos:
+          <p class="icons-size">
+            <a href=" https://www.linkedin.com/in/felipeoliveiralauton" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
+            <a href="https://github.com/FelipeLauton" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
+          </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-2 mb-2">
+        <div class="card-body ">
+          <div class="card-top">
+            <img class="rounded-circle" src="https://i.imgur.com/ycaGJzq.jpg" width="100" height="100">
+         
+            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">João Vitor</a>
+            Contatos:
+            <p class="icons-size">
+              <a href="https://www.linkedin.com/in/jo%C3%A3odepaula/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
+              <a href="https://github.com/jaoov" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
+           </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-2 mb-2">
+        <div class="card-body ">
+          <div class="card-top">
+            <img class="rounded-circle" src="https://i.imgur.com/xhkgzzs.jpg" width="100" height="100">
+            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Karina Souza</a>
+            Contatos:
+            <p class="icons-size">
+              <a href="https://www.linkedin.com/in/karinasouza-krn/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
+              <a href="https://github.com/Karina-SSm" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
+           </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-2 mb-2">
+        <div class="card-body">
+          <div class="card-top">
+            <img class="rounded-circle" src="https://i.imgur.com/xJYo4P9.jpg" width="100" height="100">
+            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Matheus Rufino</a>
+            Contatos:
+            <p class="icons-size">
+              <a href="https://www.linkedin.com/in/mathrufino/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
+              <a href="https://github.com/matheusrcruz" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
+           </p>
+          </div>     
+        </div>
+      </div>
+
+      <div class="col-md-2 mb-2">
+        <div class="card-body">     
+          <div class="card-top">
+            <img class="rounded-circle" src="https://i.imgur.com/566Bedg.jpg" width="100" height="100">
+            <a class="btn btn-light mt-2 btn-sm w-100 h-100 p-0" aria-disabled="true">Nicoli Fernandes</a>
+            Contatos:
+            <p class="icons-size">
+             <a href="https://www.linkedin.com/in/nicolifernandes/" target="_blank"><i class="fa fa-linkedin-square mr-1 text-dark" aria-hidden="true"></i></a>
+             <a href="https://github.com/nclfrnnds" target="_blank"><i class="fa fa-github-square text-dark" aria-hidden="true"></i></a>
+           </p>
+          </div>
+        </div>
+      </div>
+
+
 
   </div><!--Row-->
 
