--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
@@ -286,7 +286,7 @@
 
       </div>
       <div class="modal-footer cor-marrom-back">
-        <button type="button" class="btn btn-outline-light" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-outline-light" data-dismiss="modal"routerLink="/inicio">Cancelar</button>
         <button type="button" class="btn btn-outline-light" data-dismiss="modal" (click)="publicar()">Publicar</button>
       </div>
     </div>
