--- a/redePets-frontend/src/app/component/tema/tema.component.html
+++ b/redePets-frontend/src/app/component/tema/tema.component.html
@@ -61,8 +61,8 @@
             <td>{{tema.descricao}}</td>
             <td>{{tema.relevancia}}</td>
             <td class="d-flex justify-content-end">
-              <button class="btn btn-info mr-3" [routerLink]="['/tema/edit', tema.id]">Editar</button>
-              <button class="btn btn-danger" [routerLink]="['/tema/delete', tema.id]">Apagar</button>
+              <button class="btn btn-outline-dark mr-3" [routerLink]="['/tema/edit', tema.id]">Editar</button>
+              <button class="btn btn-outline-dark" [routerLink]="['/tema/delete', tema.id]">Apagar</button>
             </td>
           </tr>
         </tbody>
