--- a/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.html
+++ b/redePets-frontend/src/app/component/delete/postagem-delete/postagem-delete.component.html
@@ -1,43 +1,65 @@
-<div class="container mb-5 mt-5">
+<div class="container mb-5 mt-5 card-publicacao">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="text-center text-secondary">Apagar postagem</h1>
+            <h1 class="text-center ">Apagar postagem</h1>
         </div>
     </div>
 
 <div class="row">
     <div class="col-md-12">
-        <h4 class="text-center text-secondary">Você realmente deseja apagar a Postagem?</h4>
+        <h4 class="text-center ">Você realmente deseja apagar a Postagem?</h4>
     </div>
 </div>
-    <div class="row d-flex justify-content-center mt-4">
+<div class="row d-flex justify-content-center">
 
-        <div class="col-md-4">
+    <div class="col-md-6">
 
-            <div class="card text-center">
+      <div class="row mt-5">
+        <div class="card-postagem shadow-lg p-3 mb-5 bg-body rounded mt-3 mb-3">
 
-                <div class="card-body">
+          <div class="row d-flex align-items-center">
+              <div class="col-md-2 pr-0 d-flex justify-content-center">
 
-                    <h5 class="card-title m-0">{{postagem.titulo}}</h5>
+                <img src="{{foto}}" alt="Foto do usuário" width="50px" height="50px"
+              class="card-foto mr-2">
 
-                    <small class="text-muted">Tema: {{postagem.tema.nome}}</small>
+              </div>
 
-                   <p class="card-text m-3">{{postagem.texto}}</p>
-                <p class="card-text"> <small class="text-muted">
-                    {{postagem.data | date: "dd/MM/yyyy"}} às {{postagem.data | date: "HH:mm"}}</small></p>
+              <div class="col-md-6 pl-0">
+                <p class="mt-2 font-weight-bold text-white fs-16 mb-0">{{nome}}</p>
+                  <small class="text-light">
+                  {{postagem.data | date:'dd/MM/yyyy'}} às {{postagem.data | date:'HH:mm'}}</small>
+              </div>
 
-                </div>
+          </div>
+
+          <div>
+            <h5 class="text-center text-light">Tema: {{postagem.tema.nome}}</h5>
+          </div>
+
+          <div class="container">
+            <div class="row d-flex justify-content-center">
+
+              <h5 class="font-monospace mt-1 mb-2 fs-16 col-md-12 text-light">{{postagem.titulo}}</h5>
+
+              <p class="font-monospace card-publicacao mb-3 col-md-12">{{postagem.texto}}</p>
+
+              <hr>
+
+              <img src="{{postagem.imagem}}" alt="Foto"
+                class="col-md-12 d-flex justify-content-center mb-4">
 
             </div>
+          </div>
         </div>
-
+      </div>
     </div>
-
+  </div>
 
 <div class="row mt-5">
     <div class="col-md-12 d-flex justify-content-center">
-        <button class="btn btn-danger mr-4" routerLink='/inicio'>Não</button>
-        <button class="btn btn-info" (click)="apagar()">Sim</button>
+        <button class="btn btn-outline-dark mr-4" routerLink='/inicio'>Não</button>
+        <button class="btn btn-outline-dark" (click)="apagar()">Sim</button>
     </div>
 </div>
 
