--- a/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
+++ b/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
@@ -1,8 +1,8 @@
-<div class="container mt-5 mb-5">
-
+<div class="container mt-5 mb-5 cor-bege p-0 card-publicacao">
+<br>
   <div class="row">
     <div class="col-md-12">
-      <h1 class="text-center text-secondary">Atualizar tema</h1>
+      <h1 class="text-center  ">Atualizar tema</h1>
     </div>
   </div>
 
@@ -20,11 +20,12 @@
       </div>
 
       <div class="d-flex justify-content-center">
-        <button class="btn btn-danger mr-3" routerLink="/tema">Cancelar</button>
-        <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
+        <button class="btn btn-outline-dark mr-3" routerLink="/tema">Cancelar</button>
+        <button class="btn btn-outline-dark" (click)="atualizar()">Atualizar</button>
       </div>
 
     </div>
   </div>
-
+ 
+<br>
 </div>
